--- a/deploy/crds/contrail.juniper.net_managers_crd.yaml
+++ b/deploy/crds/contrail.juniper.net_managers_crd.yaml
@@ -1429,6 +1429,8 @@ spec:
                                     properties:
                                       cqlPort:
                                         type: integer
+                                      endpoint:
+                                        type: string
                                       jmxPort:
                                         type: integer
                                       port:
