Re-review changes without unit tests

--- a/deploy/crds/contrail.juniper.net_managers_crd.yaml
+++ b/deploy/crds/contrail.juniper.net_managers_crd.yaml
@@ -1432,7 +1432,7 @@ spec:
                                         type: integer
                                       port:
                                         type: integer
-                                      serverList:
+                                      serverIPList:
                                         items:
                                           type: string
                                         type: array
@@ -1476,7 +1476,7 @@ spec:
                                         type: integer
                                       secret:
                                         type: string
-                                      serverList:
+                                      serverIPList:
                                         items:
                                           type: string
                                         type: array
